# blazing-fun

./: .gitignore  Cargo.toml  devenv.nix  laze-project.yml  rust-toolchain.toml
.helix/: languages.toml
src/: main.rs  pins.rs
