[package]
name = "blazing-fan"
version = "0.1.0"
edition = "2024"

[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = [
  "external-interrupts",
  "time",
  "uart",
] }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }
